# lab2

./: CMakeLists.txt  main.cpp
libs/generator/: CMakeLists.txt  generator.cpp  generator.h
libs/writer/: CMakeLists.txt  writer.cpp  writer.h
